<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/background_gradient"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <!--LOGO-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_app" />

        <!--SUBTITLE-->
        <TextView
            android:id="@+id/textViewSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--DESCRIPTION-->
        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="60dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!--SIGN IN GOOGLE BUTTON-->
        <Button
            android:id="@+id/btnLoginGoogle"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/logingoogle"
            android:textColor="@color/darkgrey"
            android:textSize="18sp"
            android:textStyle="normal"
            app:cornerRadius="15dp"
            app:strokeColor="@color/white" />

        <!--SIGN IN FACEBOOK BUTTON-->
        <Button
            android:id="@+id/btnLoginFacebook"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/loginfacebook"
            android:textColor="@color/darkgrey"
            android:textSize="18sp"
            android:textStyle="normal"
            app:cornerRadius="15dp"
            app:strokeColor="@color/white" />

        <!--SIGN IN MANUAL BUTTON-->
        <Button
            android:id="@+id/btnLoginManual"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:shadowColor="#5C5C5C"
            android:text="@string/loginuser"
            android:textColor="@color/darkgrey"
            android:textSize="18sp"
            android:textStyle="normal"
            app:cornerRadius="15dp"
            app:strokeColor="@color/white" />

        <!--SIGN IN MANUAL BUTTON-->
        <Button
            android:id="@+id/btnSingInManual"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="#00FFFFFF"
            android:elevation="2dp"
            android:text="create new account"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="normal"
            app:cornerRadius="15dp"
            app:strokeColor="#00FFFFFF"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>